# esa-cci-lc

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker_env  environment.yml  mypy.ini  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
examples/: catalog.json  collection.json  item.json  item2.json
examples/C3S-LC-L4-LCCS-Map-300m-P1Y-2020-v2.1.1/: item.json
examples/ESACCI-LC-L4-LCCS-Map-300m-P1Y-1992-v2.0.7cds/: item.json
examples/esa-cci-lc/: collection.json
examples/esa-cci-lc-netcdf/: collection.json
examples/esa-cci-lc-netcdf/C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1/: C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1.json
examples/esa-cci-lc/C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180/: C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180-change_count.tif  C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180-current_pixel_state.tif  C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180-lccs_class.tif  C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180-observation_count.tif  C3S-LC-L4-LCCS-Map-300m-P1Y-2018-v2.1.1-N79W180.json
extension/: README.md  schema.json
scripts/: convert.py  create_examples.py  test
src/stactools/esa_cci_lc/: __init__.py  classes.py  cog.py  commands.py  constants.py  netcdf.py  stac.py  tiler.py
src/stactools/esa_cci_lc/archive/: cog.py
src/stactools/esa_cci_lc/cog/: cog.py  commands.py  stac.py  tiler.py  utils.py
src/stactools/esa_cci_lc/netcdf/: commands.py  netcdf.py  stac.py
tests/: __init__.py  conftest.py  constants.py  test_commands.py  test_module.py  test_stac.py
tests/cog/: test_commands.py  test_stac.py
tests/data-files/: C3S-LC-L4-LCCS-Map-300m-P1Y-2016-v2.1.1.json  C3S-LC-L4-LCCS-Map-300m-P1Y-2020-v2.1.1.json  ESACCI-LC-L4-LCCS-Map-300m-P1Y-1992-v2.0.7cds.json  ESACCI-LC-L4-LCCS-Map-300m-P1Y-2015-v2.0.7cds.json  collection.json
tests/netcdf/: test_commands.py  test_stac.py
