[metadata]
name = stactools-esa-cci-lc
version = attr: stactools.esa_cci_lc.__version__
description = stactools package for ESA''s Climate Change Initiative (CCI) Land Cover (LC) product 
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/esa-cci-lc
project_urls =
    Issues = https://github.com/stactools-packages/esa-cci-lc/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0

[options.packages.find]
where = src
