[metadata]
name = stactools-esa-cci-lc
version = attr: stactools.esa_cci_lc.__version__
description = stactools package for ESA''s Climate Change Initiative (CCI) Land Cover (LC) product 
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/esa-cci-lc
project_urls =
    Issues = https://github.com/stactools-packages/esa-cci-lc/issues
keywords =
    stactools
    esa
    cci
    land cover
    climate change
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0
    python-dateutil >= 2.7.0
    types-python-dateutil >= 2.7.0
    netCDF4 >= 1.6.0
    pystac >= 1.6.1
    rioxarray >= 0.12.1

[options.packages.find]
where = src
