[metadata]
name = stactools-esa-cci-lc
version = attr: stactools.esa_cci_lc.__version__
description = stactools package for ESA''s Climate Change Initiative (CCI) Land Cover (LC) product 
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias.mohr@radiant.earth
url = https://github.com/stactools-packages/esa-cci-lc
project_urls =
    Issues = https://github.com/stactools-packages/esa-cci-lc/issues
keywords =
    stactools
    esa
    cci
    land cover
    climate change
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    click >= 8.1.3
    netCDF4 >= 1.6.2
    numpy >= 1.23.5
    pystac >= 1.6.1
    python_dateutil >= 2.8.2
    rasterio >= 1.3.4
    shapely >= 2.0.0
    stactools >= 0.4.3

[options.packages.find]
where = src
